@@ -19,7 +19,7 @@
 ################################################################################
 # Constants
 
-VERSION=1.45.0
+VERSION=1.46.0
 SHORTNAME="SSL_CERT"
 
 VALID_ATTRIBUTES=",startdate,enddate,subject,issuer,serial,modulus,serial,hash,email,ocsp_uri,fingerprint,"
@@ -1655,7 +1655,7 @@ EOF
             fi
 
             # check the result
-            if ! "${FILE_BIN}" "${ISSUER_CERT_TMP}" | grep -q ': (ASCII|PEM)' ; then
+            if ! "${FILE_BIN}" "${ISSUER_CERT_TMP}" | grep -E -q ': (ASCII|PEM)' ; then
 
                 if "${FILE_BIN}" "${ISSUER_CERT_TMP}" | grep -q ': data' ; then
 
