@@ -1,3 +1,4 @@
+2017-05-15 Version 1.46.0: Fixed a problem with the detection of OCSP URLs
 2017-05-02 Version 1.45.0: Fixed bugs in the date computation and OCSP checks
 2017-04-28 Version 1.44.0: Fixed a bug occurring when more than one issuer URI is present
 2017-03-07 Version 1.43.0: Support for LDAP
